<?xml version="1.0" encoding="utf-8"?>

<!--
    Copyright 2017 Dev Labs

    Licensed under the Apache License, Version 2.0 (the "License");
    you may not use this file except in compliance with the License.
    You may obtain a copy of the License at

        http://www.apache.org/licenses/LICENSE-2.0

    Unless required by applicable law or agreed to in writing, software
    distributed under the License is distributed on an "AS IS" BASIS,
    WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
    See the License for the specific language governing permissions and
    limitations under the License.
-->

<resources>
    <string name="playback_speed_0_25">0.25x</string>
    <string name="playback_speed_0_5">0.5x</string>
    <string name="playback_speed_0_75">0.75x</string>
    <string name="playback_speed_1">1x</string>
    <string name="playback_speed_1_25">1.25x</string>
    <string name="playback_speed_1_5">1.5x</string>
    <string name="playback_speed_2">2x</string>

    <string name="media_error_io">File or network related operation errors.</string>
    <string name="media_error_malformed">
        Bitstream is not conforming to the related coding standard or file spec.
    </string>
    <string name="media_error_not_valid_for_progressive_playback">
        The video is streamed and its container is not valid for progressive playback i.e the
        video\'s index (e.g moov atom) is not at the start of the file.
    </string>
    <string name="media_error_server_died">
        Media server died. In this case, the application must release the MediaPlayer object and
        instantiate a new one.
    </string>
    <string name="media_error_timed_out">
        Some operation takes too long to complete, usually more than 3-5 seconds.
    </string>
    <string name="media_error_unknown">Unspecified media player error.</string>
    <string name="media_error_unsupported">
        Bitstream is conforming to the related coding standard or file spec, but the media
        framework does not support the feature.
    </string>
    <string name="media_error_general">General media player error.</string>
</resources>