<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/speed_0_25_button"
        android:title="@string/playback_speed_0_25" />
    <item
        android:id="@+id/speed_0_5_button"
        android:title="@string/playback_speed_0_5" />
    <item
        android:id="@+id/speed_0_75_button"
        android:title="@string/playback_speed_0_75" />
    <item
        android:id="@+id/speed_1_button"
        android:title="@string/playback_speed_1" />
    <item
        android:id="@+id/speed_1_25_button"
        android:title="@string/playback_speed_1_25" />
    <item
        android:id="@+id/speed_1_5_button"
        android:title="@string/playback_speed_1_5" />
    <item
        android:id="@+id/speed_2_button"
        android:title="@string/playback_speed_2" />
</menu>